# llm

./: .pre-commit-config.yaml  pyproject.toml
src/: main.py  message.py  temp.py
src/app/: app.py  completions_input_dto.py  completions_output_dto.py
src/di_container/: container.py
src/model_services/: fast_chat_service.py  model_service.py  test_model_service.py
tests/: app_test.py  fast_chat_service_test.py
